# Smart_City

./: CMakeLists.txt
adaptive-signals/: CMakeLists.txt  README.md  Rapport.docx  main.cpp
adaptive-signals/include/: adaptivelogic.h  adaptivestrategy.h  car_utils.h  coordinator.h  fixedstrategy.h  greenstate.h  intersectioncontroller.h  redstate.h  sensor.h  sensorr.h  trafficlight.h  trafficlight_fixe.h  trafficlightstate.h  trafficstrategy.h  yellowstate.h
adaptive-signals/src/: adaptivelogic.cpp  adaptivestrategy.cpp  coordinator.cpp  fixedstrategy.cpp  greenstate.cpp  intersectioncontroller.cpp  redstate.cpp  sensor.cpp  trafficlight_fixe.cpp  traficlight.cpp  yellowstate.cpp
adaptive-signals/tests/tests/: testcapteur.cpp
include/events/: GameEvents.hpp
include/scenes/: AdaptiveSignalsConfigScene.hpp  AdaptiveSignalsScene.hpp  GameScene.hpp  SceneManager.hpp
include/ui/: GameHUD.hpp
src/core/: Application.cpp
src/scenes/: AdaptiveSignalsConfigScene.cpp  AdaptiveSignalsScene.cpp  GameScene.cpp  MainMenuScene.cpp  MapConfigScene.cpp  SceneManager.cpp
src/ui/: GameHUD.cpp
tests/: CMakeLists.txt  GameSceneTests.cpp
